--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,9 @@
+VERSION 1.2.0
+   o goenrich, meshenrich, reactomeenrich, doenrich, ncgenrich, and dgnenrich in cellCellReport are added
+   o A bug related in sparse matrix in cellCellSetting is fixed
+   o All the vignettes are updated
+   o A vignette for reanalysis of the results of scTensor is added
+
 VERSION 1.0.13
    o Gene-gene network based on visNetwork is introduced
 
