--- a/inst/NEWS
+++ b/inst/NEWS
@@ -3,6 +3,7 @@ VERSION 1.2.0
    o A bug related in sparse matrix in cellCellSetting is fixed
    o All the vignettes are updated
    o A vignette for reanalysis of the results of scTensor is added
+   o Some bugs are fixed
 
 VERSION 1.0.13
    o Gene-gene network based on visNetwork is introduced
