--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,4 +1,9 @@
+VERSION 1.2.1
+------------------------
+   o Some bugs are fixed
+
 VERSION 1.2.0
+------------------------
    o goenrich, meshenrich, reactomeenrich, doenrich, ncgenrich, and dgnenrich in cellCellReport are added
    o A bug related in sparse matrix in cellCellSetting is fixed
    o All the vignettes are updated
@@ -6,6 +11,7 @@ VERSION 1.2.0
    o Some bugs are fixed
 
 VERSION 1.0.13
+------------------------
    o Gene-gene network based on visNetwork is introduced
 
 VERSION 1.0.11 - 1.0.12
